# CMCP_wall_building_planner

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  build_cmake_init.sh  build_cmake_target.sh  build_crl_symlinks.sh  clean.sh  ctop_planner_standalone.cfg
cmake/: load_folder.cmake  post_run_link.cmake  string_starts_with.cmake  subdirlist.cmake
cmake/Modules/: FindCPLEX.cmake  FindCairo.cmake  FindLog4cxx.cmake
config/: Marco_1.txt  Marco_20.txt  Marco_22.txt  Marco_23.txt  Marco_26.txt  Marco_27.txt  Marco_29.txt  Marco_3.txt  Marco_31.txt  Marco_32.txt  Test_10.txt  Test_105.txt  Test_14.txt  Test_150.txt  Test_39.txt  Test_5.txt  Test_68.txt  planner.yaml  planner2.yaml  run_cplex_multi.sh  run_multi.sh  run_obj2txt.sh  run_plan.sh  run_plan2tex.sh  wall.big.txt  wall.obj.txt  wall.small.txt  wall.txt  wall_1024_multi.txt  wall_128_multi.txt  wall_16_multi.txt  wall_256_multi.txt  wall_32_multi.txt  wall_4_multi.txt  wall_512_multi.txt  wall_64_multi.txt  wall_8_multi.txt  wall_simulation.txt
ctop/: CMakeLists.txt
ctop/common/: CMakeLists.txt
ctop/common/src/ctop/: Brick.h  WallInfo.h  WallSolution.h  cmd_config.cpp  cmd_config.h  pt2eigen.h
ctop/common/src/ctop/geometry/: Point.h  Point3D.h
ctop/common/src/ctop/heuristic/: PrecedenceRule.cpp  PrecedenceRule.h
ctop/common/src/ctop/util/: math_common.cpp  math_common.h
ctop/log/: CMakeLists.txt
ctop/log/src/ctop/: log.cpp  log.h
ctop/log/src/ctop/log/: ColorModifier.h  Logger.cpp  Logger.h
ctop/optimal/: CMakeLists.txt
ctop/optimal/src/: IlpCtopDefinition.cpp  IlpCtopDefinition.h  IlpCtopSolver.cpp  IlpCtopSolver.h  defines.h  heuristic_types.h
ctop/optimal/src/exception/: CtopNoSolution.cpp  CtopNoSolution.h
ctop/optimal/src/heuristic/: ClusterNodeDist.cpp  ClusterNodeDist.h  ClusterSOP.h  DatasetOP.h  DatasetSOP.cpp  DatasetSOP.h  EdgeTypes.cpp  EdgeTypes.h  GraphNode.cpp  GraphNode.h  HeuristicTypes.cpp  HeuristicTypes.h  ImprovementLogRecord.h  InsertionHistoryRecord.cpp  InsertionHistoryRecord.h  NodeVisit.cpp  NodeVisit.h  SingleSolutionCTOP.h  SolutionCTOP.cpp  SolutionCTOP.h  SolutionGTSP.h  StartGoalNodes.h  TimedImprovement.h  Tour.cpp  Tour.h
ctop/optimal/src/loader/: dataset_loader_sop.cpp  dataset_loader_sop.h  dataset_loader_wall.cpp  dataset_loader_wall.h
ctop/util/: CMakeLists.txt
ctop/util/src/ctop/util/: Filepath.cpp  Filepath.h  QueueBuffer.h  csvreader.h  has_unique_id.h  make_unique.h  readable_size.cpp  readable_size.h  replace.cpp  replace.h  reverse_map.h  split.cpp  split.h  sync_unordered_map.h  timestamp.cpp  timestamp.h  trim.cpp  trim.h
lib/: CMakeLists.txt
standalone/: CMakeLists.txt
standalone/grasp/: CMakeLists.txt  main.cpp  main_multicore.cpp  main_snap.cpp
standalone/grasp/src/: Grasp.cpp  Grasp.h  Plane.h  WallEdge.cpp  WallGraph.cpp  WallGraph.h  pt2eigen.cpp  pt2eigen.h
standalone/optimal/: CMakeLists.txt
standalone/optimal/src/: common_config.cpp  common_config.h  ctop_planner_standalone.cpp  ilp_ctop_alg_solver.cpp  ilp_ctop_alg_solver.h
standalone/plan2tex/: CMakeLists.txt
standalone/plan2tex/src/: main.cpp
